--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: nuget/setup-nuget@fd9fffd6ca4541cf4152a9565835ca1a88a6eb37
+      - uses: NuGet/setup-nuget@v1.1.1
       - uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Set up projects for analysis
