--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "nuget"
-    # Files stored in src/ppium.Net directory
+    # Files stored in src/Appium.Net directory
     directory: "/src/Appium.Net" 
     schedule:
       interval: "daily"
