add comment for github-actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,4 +11,5 @@ updates:
     # default location of `.github/workflows`
     directory: "/"
     schedule:
+      # Check for updates to GitHub Actions every week
       interval: "weekly"
