fixes here and there

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
 
   - package-ecosystem: "nuget"
     # Files stored in test/integration directory
-    directory: "/test/integration" 
+    directory: "test/integration" 
     schedule:
       interval: "daily"
 
@@ -22,7 +22,7 @@ updates:
     directory: "/"
     schedule:
       # Check for updates to GitHub Actions every week
-      interval: "weekly"
+      interval: "daily"
     commit-message:
       # Prefix all commit messages with "[github-actions] "
       prefix: "[github-actions] "
