--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -26,9 +26,9 @@ jobs:
       - uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Install .NET Core SDK
-        uses: actions/setup-dotnet@v7
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '3.1.410' # or the version you need
+          dotnet-version: '3.1.410'
 
       - name: Set up projects for analysis
         uses: security-code-scan/security-code-scan-add-action@f8ff4f2763ed6f229eded80b1f9af82ae7f32a0d
